[gd_scene load_steps=31 format=2]

[ext_resource path="res://jack/attack/adventurer-attack3-03.png" type="Texture" id=1]
[ext_resource path="res://jack/attack/adventurer-attack3-05.png" type="Texture" id=2]
[ext_resource path="res://jack/attack/adventurer-attack3-01.png" type="Texture" id=3]
[ext_resource path="res://jack/attack/adventurer-attack3-02.png" type="Texture" id=4]
[ext_resource path="res://jack/attack/adventurer-attack3-04.png" type="Texture" id=5]
[ext_resource path="res://jack/respiration/adventurer-idle-2-00.png" type="Texture" id=6]
[ext_resource path="res://jack/respiration/adventurer-idle-2-02.png" type="Texture" id=7]
[ext_resource path="res://jack/respiration/adventurer-idle-2-01.png" type="Texture" id=8]
[ext_resource path="res://jack/courir/adventurer-run-04.png" type="Texture" id=9]
[ext_resource path="res://jack/courir/adventurer-run-02.png" type="Texture" id=10]
[ext_resource path="res://jack/courir/adventurer-run-00.png" type="Texture" id=11]
[ext_resource path="res://jack/courir/adventurer-run-03.png" type="Texture" id=12]
[ext_resource path="res://jack/courir/adventurer-run-01.png" type="Texture" id=13]
[ext_resource path="res://jack/courir/adventurer-run-05.png" type="Texture" id=14]
[ext_resource path="res://jack/sauter/adventurer-jump-01.png" type="Texture" id=15]
[ext_resource path="res://jack/sauter/adventurer-jump-02.png" type="Texture" id=16]
[ext_resource path="res://jack/sauter/adventurer-jump-00.png" type="Texture" id=17]
[ext_resource path="res://jack/sauter/adventurer-jump-03.png" type="Texture" id=18]
[ext_resource path="res://jack/jack/jack.gd" type="Script" id=19]
[ext_resource path="res://jack/jack/hurt/adventurer-hurt-00.png" type="Texture" id=20]
[ext_resource path="res://jack/jack/hurt/adventurer-hurt-01.png" type="Texture" id=21]
[ext_resource path="res://jack/jack/hurt/adventurer-hurt-02.png" type="Texture" id=22]
[ext_resource path="res://Interface/Interface.tscn" type="PackedScene" id=23]
[ext_resource path="res://jack/jack/die/adventurer-die-04.png" type="Texture" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 26 ), ExtResource( 26 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 14 ) ],
"loop": true,
"name": "courir",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 18 ) ],
"loop": true,
"name": "sauter",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "respiration",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "attack",
"speed": 30.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.53345, 28.4728 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 15.4038 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16.1952, 25.8608 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 8.89243
height = 7.71202

[sub_resource type="CapsuleShape2D" id=6]
radius = 9.54804
height = 6.63934

[node name="Jack" type="KinematicBody2D" groups=[
"Jacky",
]]
script = ExtResource( 19 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -0.529724 )
scale = Vector2( 1.517, 1.975 )
frames = SubResource( 1 )
animation = "die"

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -100
limit_bottom = 700
smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="Interface" parent="Camera2D/CanvasLayer" instance=ExtResource( 23 )]
margin_left = 0.50415
margin_top = -0.498596

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.45615, 6.45467 )
shape = SubResource( 2 )

[node name="AttackArea" type="Area2D" parent="." groups=[
"Sword",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 29.3439, 13.5107 )
shape = SubResource( 3 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( -30.9773, 14.0161 )
shape = SubResource( 3 )
disabled = true

[node name="jackarea" type="Area2D" parent="." groups=[
"Jack",
]]
collision_mask = 2147483649

[node name="CollisionShape2D" type="CollisionShape2D" parent="jackarea"]
position = Vector2( -1.62284, 9.07634 )
shape = SubResource( 4 )

[node name="flipArea" type="Area2D" parent="." groups=[
"Flip",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="flipArea"]
position = Vector2( 151.862, 31.5153 )
shape = SubResource( 5 )

[node name="flipArea2" type="Area2D" parent="." groups=[
"Flip2",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="flipArea2"]
position = Vector2( -149.894, 27.8406 )
shape = SubResource( 6 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="jackarea" to="." method="_on_jackarea_area_entered"]
